syntax = "proto3";
package io.harness.eventsframework.schemas.entity;
option java_multiple_files = true;

enum ScopeProtoEnum {
  ACCOUNT = 0;
  ORG = 1;
  PROJECT = 2;
}